k8s/local/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-frontend
  namespace: weather-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather-frontend
  template:
    metadata:
      labels:
        app: weather-frontend
    spec:
      containers:
        - name: weather-frontend
          image: fierdakcap/weather-frontend:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: weather-frontend-service
  namespace: weather-app
spec:
  selector:
    app: weather-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
